<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="icon">icon</string>
    <string name="app_name">Deduplicate SMS</string>
    <string name="cancelling">Cancelling…</string>
    <string name="more_apps">More Apps</string>
    <string name="deduplicate">Deduplicate</string>
    <string name="reading_msg">Reading Messages</string>
    <string name="warning_message">This app is not responsible if any data is lost, kindly take a
        backup before proceeding.
    </string>
    <string name="revert">Revert to previous messaging app</string>
    <string name="security_reasons">
        <![CDATA[For security reasons only ONE app can read & write SMS for mobile running on Android-KitKat and above.\nAfter deleting the duplicates revert back to default/previous SMS app. Find more at https://android-developers.blogspot.com/2013/10/getting-your-sms-apps-ready-for-kitkat.html]]></string>
    <string name="required_permissions">Required Permission</string>
    <string name="permission_explain">
        <![CDATA[%s requires access to \"READ_SMS & WRITE_SMS\" to delete duplicate messages.]]></string>
    <string name="failed">Failed</string>
    <string name="failure_message">Default SMS app not changed. Cannot read/write SMS</string>
    <string name="m_permission_inform">
        <![CDATA[App uses read/write sms permission to find & delete duplicates. No personal data is read.]]></string>
    <string name="no_duplicates">No duplicates found</string>
    <string name="permissions_revoked">Permissions Revoked</string>
    <string name="app_cannot_run">Without READ_SMS permission, app cannot run.\n</string>
    <string name="app_will_exit">" App will exit on press of "</string>
    <string name="ignore_timestamp">Ignore timestamp?</string>
    <string name="ignore_space">Ignore space?</string>
    <string name="warning">Warning!</string>
    <string name="warning_desc">This will delete similar messages from the SAME sender irrespective
        of any date.
    </string>
    <string name="keep_first">Keep first message.</string>
    <string name="keep_last">Keep last message.</string>
    <string name="delete_by">Delete X SMS in batch, max 99</string>

    <!-- Plurals -->
    <plurals name="deleted_messages" formatted="true">
        <item quantity="one">Deleted %1$d/%2$d duplicate</item>
        <item quantity="other">Deleted %1$d/%2$d duplicates</item>
    </plurals>
    <plurals name="delete_duplicates">
        <item quantity="one">Delete %d duplicate?</item>
        <item quantity="other">Delete %d duplicates?</item>
    </plurals>
</resources>
